--- a/aula01.ipynb
+++ b/aula01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Desafio - Hora da Prática"
+    "# Desafio - Hora da Prática - Aula 01 - Bibliotecas"
    ]
   },
   {
@@ -59,7 +59,8 @@
    "metadata": {},
    "source": [
     "3. Crie um programa que leia a seguinte lista de números e escolha um número desta aleatoriamente.\n",
-    ">lista = [8, 12, 54, 23, 43, 1, 90, 87, 105, 77]"
+    "    \n",
+    "    >lista = [8, 12, 54, 23, 43, 1, 90, 87, 105, 77]"
    ]
   },
   {
@@ -90,7 +91,8 @@
    "metadata": {},
    "source": [
     "4. Crie um programa que sorteia, aleatoriamente, um número inteiro positivo menor que 100.\n",
-    ">**Dica**: use a função randrange() da biblioteca random. Essa função recebe como parâmetro o valor limite para a escolha aleatória ou um intervalo se passado o limite mínimo e máximo. Por exemplo, randrange(5) gera valores inteiros menores que 5."
+    "    \n",
+    "    >**Dica**: use a função randrange() da biblioteca random. Essa função recebe como parâmetro o valor limite para a escolha aleatória ou um intervalo se passado o limite mínimo e máximo. Por exemplo, randrange(5) gera valores inteiros menores que 5."
    ]
   },
   {
@@ -119,7 +121,8 @@
    "metadata": {},
    "source": [
     "5. Crie um programa que solicite à pessoa usuária digitar dois números inteiros e calcular a potência do 1º número elevado ao 2º.\n",
-    ">**Dica**: use a função pow() da biblioteca math"
+    "\n",
+    "    >**Dica**: use a função pow() da biblioteca math"
    ]
   },
   {
@@ -191,7 +194,7 @@
    "source": [
     "7. Você recebeu uma demanda para gerar números de token para acessar o aplicativo de uma empresa. O token precisa ser par e variar de 1000 até 9998. Escreva um código que solicita à pessoa usuária o seu nome e exibe uma mensagem junto a esse token gerado aleatoriamente.\n",
     "\n",
-    ">*\"Olá, [nome], o seu token de acesso é [token]! Seja bem-vindo(a)!\"*"
+    "    >*\"Olá, [nome], o seu token de acesso é [token]! Seja bem-vindo(a)!\"*"
    ]
   },
   {
@@ -222,9 +225,12 @@
    "metadata": {},
    "source": [
     "8. Para diversificar e atrair novos(as) clientes, uma lanchonete criou um item misterioso em seu cardápio chamado \"salada de frutas surpresa\". Neste item, são escolhidas aleatoriamente 3 frutas de uma lista de 12 para compor a salada de frutas da pessoa cliente. Crie o código que faça essa seleção aleatória de acordo com a lista abaixo:\n",
-    ">frutas = [\"maçã\", \"banana\", \"uva\", \"pêra\", \n",
-    "          \"manga\", \"coco\", \"melancia\", \"mamão\",\n",
-    "          \"laranja\", \"abacaxi\", \"kiwi\", \"ameixa\"]"
+    "\n",
+    "    >frutas = [\n",
+    "        \"maçã\", \"banana\", \"uva\", \"pêra\", \n",
+    "        \"manga\", \"coco\", \"melancia\", \"mamão\",\n",
+    "        \"laranja\", \"abacaxi\", \"kiwi\", \"ameixa\"\n",
+    "    ]"
    ]
   },
   {
@@ -260,11 +266,11 @@
    "source": [
     "9. Você recebeu um desafio de calcular a raiz quadrada de uma lista de números, identificando quais resultaram em um número inteiro. A lista é a seguinte:\n",
     "\n",
-    ">numeros = [2, 8, 15, 23, 91, 112, 256]\n",
+    "    >numeros = [2, 8, 15, 23, 91, 112, 256]\n",
     "\n",
-    "No final, informe quais números possuem raízes inteiras e seus respectivos valores.\n",
+    "    No final, informe quais números possuem raízes inteiras e seus respectivos valores.\n",
     "\n",
-    ">**Dica**: use a comparação entre a divisão inteira (//) da raiz por 1 com o valor da raiz para verificar se o número é inteiro. "
+    "    >**Dica**: use a comparação entre a divisão inteira (//) da raiz por 1 com o valor da raiz para verificar se o número é inteiro. "
    ]
   },
   {
@@ -298,7 +304,7 @@
    "source": [
     "10. Faça um programa para uma loja que vende grama para jardins. Essa loja trabalha com jardins circulares e o preço do metro quadrado da grama é de R$ 25,00. Peça à pessoa usuária o raio da área circular e devolva o valor em reais do quanto precisará pagar.\n",
     "\n",
-    ">**Dica**: use a variável *pi* e o método pow() da biblioteca math. O cálculo da área de um círculo é de: *A = π*r^2* (lê-se pi vezes raio ao quadrado)."
+    "    >**Dica**: use a variável *pi* e o método pow() da biblioteca math. O cálculo da área de um círculo é de: *A = π*r^2* (lê-se pi vezes raio ao quadrado)."
    ]
   },
   {
