--- a/experimentos.ipynb
+++ b/experimentos.ipynb
@@ -178,6 +178,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Gerar um dicionário a partir da lista da lista abaixo para passá-la à pessoa responsável por construir as tabelas, possibilitando a análise dos dados.\n",
+    "\n",
+    "    >lista_completa = [[('João', 'J720'), ('Maria', 'M205'), ('José', 'J371'), ('Cláudia', 'C546'), ('Ana', 'A347')],\n",
+    "                  [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]],\n",
+    "                  [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+    "                  ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']]\n",
+    "\n",
+    "    * As chaves do nosso dicionário serão as colunas identificando o tipo de dado.\n",
+    "\n",
+    "    * Os valores serão as listas com os dados correspondentes àquela chave."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Notas': [[8.0, 9.0, 10.0],\n",
+       "  [9.0, 7.0, 6.0],\n",
+       "  [3.4, 7.0, 7.0],\n",
+       "  [5.5, 6.6, 8.0],\n",
+       "  [6.0, 10.0, 9.5]],\n",
+       " 'MediaFinal': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+       " 'Situação': ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado'],\n",
+       " 'Nome': ['João', 'Maria', 'José', 'Cláudia', 'Ana']}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_completa = [\n",
+    "    [('João', 'J720'), ('Maria', 'M205'), ('José', 'J371'), ('Cláudia', 'C546'), ('Ana', 'A347')],\n",
+    "    [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]],\n",
+    "    [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+    "    ['Aprovado', 'Aprovado', 'Reprovado', 'Aprovado', 'Aprovado']\n",
+    "]\n",
+    "\n",
+    "colunas = ['Notas', 'Media' 'Final', 'Situação']\n",
+    "\n",
+    "nomes = [lista_completa[0][i][0] for i in range(len(lista_completa[0]))]\n",
+    "\n",
+    "cadastro = {colunas[i]: lista_completa[i+1] for i in range(len(colunas))}\n",
+    "\n",
+    "cadastro['Nome'] = nomes\n",
+    "\n",
+    "cadastro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
