--- a/experimentos.ipynb
+++ b/experimentos.ipynb
@@ -236,6 +236,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Recebemos uma demanda da instituição de ensino do nosso projeto que nos repassou uma lista de 20 estudantes e suas respectivas médias finais. Aqui, nós precisamos selecionar estudantes que tenham média final maior ou igual a 9.0. Esses(as) estudantes serão premiados(as) com uma bolsa de estudos para o próximo ano letivo.\n",
+    "\n",
+    "    Para filtrar os dados, temos que gerar um dicionário cujas chaves são os nomes e os valores são as médias dos(as) estudantes selecionados(as). Estes são os dados recebidos:\n",
+    "\n",
+    "    >nomes_estudantes = [ \"Enrico Monteiro\", \"Luna Pereira\", \"Anthony Silveira\", \"Letícia Fernandes\", \n",
+    "                        \"João Vitor Nascimento\", \"Maysa Caldeira\", \"Diana Carvalho\", \"Mariane da Rosa\",\n",
+    "                        \"Camila Fernandes\", \"Levi Alves\", \"Nicolas da Rocha\", \"Amanda Novaes\", \n",
+    "                        \"Laís Moraes\", \"Letícia Oliveira\", \"Lucca Novaes\", \"Lara Cunha\", \n",
+    "                        \"Beatriz Martins\", \"João Vitor Azevedo\", \"Stephany Rosa\", \"Gustavo Henrique Lima\" ]\n",
+    "\n",
+    "    >medias_estudantes = [5.4, 4.1, 9.1, 5.3, 6.9, 3.1, 10.0, 5.0, 8.2, 5.5,\n",
+    "                        8.1, 7.4, 5.0, 3.7, 8.1, 6.2, 6.1, 5.6, 6.7, 8.2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Anthony Silveira': 9.1, 'Diana Carvalho': 10.0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nomes_estudantes = [\n",
+    "    \"Enrico Monteiro\", \"Luna Pereira\", \"Anthony Silveira\", \"Letícia Fernandes\", \n",
+    "    \"João Vitor Nascimento\", \"Maysa Caldeira\", \"Diana Carvalho\", \"Mariane da Rosa\",\n",
+    "    \"Camila Fernandes\", \"Levi Alves\", \"Nicolas da Rocha\", \"Amanda Novaes\", \n",
+    "    \"Laís Moraes\", \"Letícia Oliveira\", \"Lucca Novaes\", \"Lara Cunha\", \n",
+    "    \"Beatriz Martins\", \"João Vitor Azevedo\", \"Stephany Rosa\", \"Gustavo Henrique Lima\"\n",
+    "]\n",
+    "\n",
+    "medias_estudantes = [\n",
+    "    5.4, 4.1, 9.1, 5.3, \n",
+    "    6.9, 3.1, 10.0, 5.0, \n",
+    "    8.2, 5.5,8.1, 7.4, \n",
+    "    5.0, 3.7, 8.1, 6.2, \n",
+    "    6.1, 5.6, 6.7, 8.2\n",
+    "]\n",
+    "\n",
+    "# estudantes_selecionados = {nomes_estudantes[i]:medias_estudantes[i] for i in range(len(nomes_estudantes)) if medias_estudantes[i]>=9.0}\n",
+    "\n",
+    "estudantes_selecionados = {nomes: medias for nomes, medias in zip(nomes_estudantes, medias_estudantes) if medias >= 9.0}\n",
+    "\n",
+    "estudantes_selecionados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
